--- a/node-with-ts/package.json
+++ b/node-with-ts/package.json
@@ -5,12 +5,16 @@
   "main": "src/characters.js",
   "scripts": {
     "build": "npx tsc",
-    "start": "npm run build && node dist/run-function.js"
+    "start": "npm run build && node dist/run-function.js",
+    "test": "jest"
   },
   "author": "CLuera",
   "devDependencies": {
     "@tsconfig/node16": "^1.0.2",
+    "@types/jest": "^27.5.1",
     "@types/node": "^17.0.35",
+    "jest": "^28.1.0",
+    "ts-jest": "^28.0.2",
     "typescript": "^4.6.4"
   },
   "dependencies": {
