--- a/azure-function/package.json
+++ b/azure-function/package.json
@@ -7,14 +7,17 @@
     "watch": "tsc -w",
     "prestart": "npm run build",
     "start": "func start",
-    "test": "echo \"No tests yet...\""
+    "test": "jest"
   },
   "dependencies": {
     "graphql-request": "^4.2.0"
   },
   "devDependencies": {
     "@azure/functions": "^3.0.0",
+    "@types/jest": "^27.5.1",
     "@types/node": "^17.0.35",
+    "jest": "^28.1.0",
+    "ts-jest": "^28.0.2",
     "typescript": "^4.0.0"
   }
 }
